# GAM703-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
components/: CMakeLists.txt
components/include/components/: Camera.hpp  IComponent.hpp  Renderer.hpp  Transform.hpp
components/src/: Camera.cpp  IComponent.cpp  Renderer.cpp  Transform.cpp
components/tests/: CMakeLists.txt
components/tests/src/: ComponentsTests.cpp  TransformTests.cpp
core/: CMakeLists.txt
core-interfaces/: CMakeLists.txt
core-interfaces/include/core-interfaces/: ICamera.hpp  IComponent.hpp  IEngine.hpp  IInput.hpp  IModel.hpp  IRenderer.hpp  IResourceManager.hpp  IScene.hpp  ISceneRenderer.hpp  ITexture.hpp  ITransform.hpp
core-interfaces/src/: IComponent.cpp
core/include/core/: Engine.hpp  Input.hpp  ResourceManager.hpp  Scene.hpp  SceneRenderer.hpp  Time.hpp
core/src/: Engine.cpp  Input.cpp  ResourceManager.cpp  Scene.cpp  SceneRenderer.cpp  Time.cpp
core/tests/src/: TimeTests.cpp
docs/: CMakeLists.txt
engine/audio/: CMakeLists.txt
engine/audio/include/engine/audio/: AudioEngine.fwd.hpp  AudioEngine.hpp  AudioMixer.fwd.hpp  AudioMixer.hpp  AudioSource.hpp  Config.hpp
engine/audio/src/: AudioEngine.cpp  AudioMixer.cpp  AudioSource.cpp
engine/audio/tests/: CMakeLists.txt
engine/audio/tests/src/: AudioTests.cpp
engine/components/: CMakeLists.txt
engine/components/include/components/: Camera.hpp  Config.hpp  Renderer.hpp  Transform.hpp
engine/components/include/engine/components/: AudioPlayer.hpp  Behavior.hpp  Camera.hpp  Component.hpp  Config.hpp  DirectionalLight.hpp  Light.hpp  PointLight.hpp  Renderer.hpp  SpotLight.hpp  Transform.fwd.hpp  Transform.hpp
engine/components/src/: AudioPlayer.cpp  Behavior.cpp  Camera.cpp  Component.cpp  DirectionalLight.cpp  Light.cpp  PointLight.cpp  Renderer.cpp  SpotLight.cpp  Transform.cpp
engine/components/tests/: CMakeLists.txt
engine/components/tests/src/: ComponentsTests.cpp  TransformTests.cpp
engine/core/: CMakeLists.txt
engine/core-interfaces/: CMakeLists.txt
engine/core-interfaces/include/core-interfaces/: Config.hpp  IEngine.hpp  ISceneRenderer.hpp
engine/core-interfaces/include/engine/core-interfaces/: Behavior.hpp  Camera.hpp  Component.hpp  Config.hpp  ICamera.hpp  IComponent.hpp  IEngine.fwd.hpp  IEngine.hpp  IInput.hpp  ILight.hpp  IMaterial.hpp  IModel.hpp  IRenderer.hpp  IResourceManager.hpp  IScene.fwd.hpp  IScene.hpp  ISceneRenderer.hpp  IShader.hpp  ITexture.hpp  ITime.hpp  ITransform.fwd.hpp  ITransform.hpp  Light.hpp  Material.hpp  Renderer.hpp  Scene.fwd.hpp  Scene.hpp  SceneRenderer.hpp  Shader.hpp  Texture.hpp  Time.hpp  Transform.fwd.hpp  Transform.hpp
engine/core-interfaces/src/: Behavior.cpp  Camera.cpp  Component.cpp  ICamera.cpp  IComponent.cpp  IEngine.cpp  ILight.cpp  IMaterial.cpp  IRenderer.cpp  IScene.cpp  ISceneRenderer.cpp  IShader.cpp  ITexture.cpp  ITransform.cpp  Light.cpp  Material.cpp  Renderer.cpp  Scene.cpp  SceneRenderer.cpp  Shader.cpp  Texture.cpp  Time.cpp  Transform.cpp
engine/core/include/core/: Config.hpp  ResourceManager.hpp  Scene.hpp  SceneRenderer.hpp  Time.hpp
engine/core/include/engine/core/: Config.hpp  Engine.fwd.hpp  Engine.hpp  Input.hpp  ResourceManager.fwd.hpp  ResourceManager.hpp  Scene.fwd.hpp  Scene.hpp  SceneRenderer.hpp  Time.hpp
engine/core/src/: Engine.cpp  Input.cpp  ResourceManager.cpp  Scene.cpp  SceneRenderer.cpp  Time.cpp
engine/core/tests/: CMakeLists.txt
engine/core/tests/src/: TimeTests.cpp
engine/graphic/: CMakeLists.txt
engine/graphic/include/engine/graphic/: Config.hpp  Material.hpp  Mesh.hpp  Model.hpp  ModelLoader.hpp  Shader.fwd.hpp  Shader.hpp  Texture.hpp
engine/graphic/include/graphic/: Mesh.hpp  Model.hpp  ModelLoader.hpp  Shader.hpp  Texture.hpp
engine/graphic/src/: Material.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  Shader.cpp  Texture.cpp
engine/gui/: CMakeLists.txt
engine/gui/include/engine/gui/: Button.hpp  CheckBox.hpp  ColorPicker.hpp  Config.hpp  GUIElement.hpp  IGUIElement.hpp  Slider.hpp  Text.hpp  Window.hpp
engine/gui/include/gui/: Config.hpp  Window.hpp
engine/gui/src/: Button.cpp  Checkbox.cpp  ColorPicker.cpp  GUIElement.cpp  IGUIElement.cpp  Slider.cpp  Text.cpp  Window.cpp
engine/utility/: CMakeLists.txt
engine/utility/include/engine/utility/: Config.hpp  File.hpp  Math.hpp  ObjectReference.hpp  ReferencedObject.hpp
engine/utility/src/: File.cpp  Math.cpp
engine/utility/tests/: CMakeLists.txt
engine/utility/tests/src/: FileTests.cpp  MathTests.cpp  ObjectReferenceTest.cpp
game/components/: CMakeLists.txt
game/components/include/components/: MovementController.hpp
game/components/include/game/components/: AIMovement.hpp  Config.hpp  Flee.hpp  FollowTarget.hpp  MovementController.hpp  MovementStrategy.hpp  PowerLevel.hpp  Seek.hpp  Spawner.hpp  Wander.hpp  Wonder.hpp
game/components/src/: AIMovement.cpp  Flee.cpp  FollowTarget.cpp  MovementController.cpp  MovementStrategy.cpp  PowerLevel.cpp  Seek.cpp  Spawner.cpp  Wander.cpp  Wonder.cpp
graphic/: CMakeLists.txt
graphic/include/graphic/: Config.hpp  Mesh.hpp  Model.hpp  ModelLoader.hpp  Shader.hpp  Texture.hpp
graphic/src/: Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp
gui/: CMakeLists.txt
gui/include/gui/: Window.hpp
gui/src/: Window.cpp
resources/Shaders/: Checkermap.frag  Default.frag  Default.vert
src/: main.cpp
utility/: CMakeLists.txt
utility/include/utility/: Config.hpp  File.hpp
utility/src/: File.cpp
utility/tests/: CMakeLists.txt  ReadTest.txt
